# gcide

./: ChangeLog  Makefile.in  README  configure  configure.in  dict-gcide_0.48.orig.tar.gz.delta  dict-gcide_0.48.orig.tar.gz.id  dump.h  fmt.c  fmt.h  parse.y  scan.l  webcheck.l  webfilter.l  webfmt.c  webfmt.h
cide/: README.dic  cide.b  cide.d  cide.e  cide.f  cide.g  cide.h  cide.i  cide.j  cide.k  cide.l  cide.m  cide.n  cide.q  cide.r  cide.t  cide.u  cide.v  cide.w  cide.x  cide.y  cide.z  pronunc.web  tag.list  tagset.web  webfont.asc
debian/: TODO  changelog  control  copyright  postinst  postinst.web  postrm  postrm.web  presubj  rm_pgnum  rules  run  run-on_comments  sedfile
libmaa/: Makefile.in  README  arg.c  argtest.c  argtest.out  base26.c  base64.c  basetest.c  basetest.out  bit.c  bittest.c  bittest.out  config.h.in  configure  configure.in  debug.c  debugtest.c  debugtest.out  decl.h  error.c  flags.c  getopt.c  hash.c  hashtest.c  hashtest.out  list.c  listtest.c  listtest.out  log.c  maa.c  maa.h  maaP.h  memory.c  memtest.c  mkrnd.c  obstack.c  parse-concrete.c  parse.c  pr.c  prime.c  (+21 more)
libmaa/doc/: Makefile.in  extract.pl  lgrindefs  libmaa.600dpi.ps  libmaa.bib  libmaa.tex  refalpha.bst
